# Weathercast

./: .gitignore  Readme.md  pyproject.toml
weathercast/: config.py  main.py  weather.py
weathercast/keyboard/: kb.py
weathercast/middlewares/: __init__.py  db_mid.py  user_mid.py
weathercast/models/: user_model.py  weather_model.py
weathercast/payloads/: ch_city_pay.py  sub_pay.py  unsub_pay.py
weathercast/routers/: change_city_router.py  subscribe_router.py  unsubscribe_router.py
weathercast/routes/: __init__.py  change_city_handler.py  subscribe_handler.py  unsubscribe_handler.py
weathercast/sender/: main_sender.py  weather.py
